#Nmap Changelog ($Id$); -*-text-*-

o [NSE][GH#1126] New script vulners.nse queries the Vulners CVE database API
  using CPE information from Nmap's service and application version detection.
  [GMedian, Daniel Miller]

o [NSE][GH#1633] New script rdp-ntlm-info.nse allows extraction of Windows
  domain information from RDP services. Information extracted and format
  of output is the same as other *-ntlm-info scripts. [Tom Sellers]

o [NSE][GH#1614] Add TLS support to rdp-enum-encryption. Enables determining
  protocol version against servers that require TLS and lays ground work for
  some NLA/CredSSP information collection. [Tom Sellers]

o [NSE][GH#1611] Address two protocol parsing issues in rdp-enum-encryption and
  the RDP nse library which broke scanning of Windows XP. Clarify protocol
  types [Tom Sellers]

o [NSE][GH#1608] Script http-fileupload-exploiter failed to locate its resource
  file unless executed from a specific working directory. [nnposter]

o [NSE][GH#1571] The HTTP library now provides transparent support for gzip-
  encoded response body. (See https://github.com/nmap/nmap/pull/1571 for an
  overview.) [nnposter]

o [NSE][GH#1571] The HTTP library is now enforcing a size limit on the received
  response body. The default limit can be adjusted with a script argument,
  which applies to all scripts, and can be overridden case-by-case with an HTTP
  request option. (See https://github.com/nmap/nmap/pull/1571 for details.)
  [nnposter]

o [Nsock][Ncat][GH#1075] Add AF_VSOCK (Linux VM sockets) functionality to Nsock
  and Ncat. VM sockets are used for communication between virtual machines and
  the hypervisor. [Stefan Hajnoczi]

o [NSE][GH#1467] Avoid clobbering the "severity" and "ignore_404" values of
  fingerprints in http-enum. None of the standard fingerprints uses these
  fields. [Kostas Milonas]

o [NSE][GH#1077] Fix a crash caused by a double-free of libssh2 session data